kubernetes/kyverno/rds-should-be-encrypted/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: rds-should-be-encrypted
  annotations:
    policies.kyverno.io/title: RDS should be encrypted
    policies.kyverno.io/category: Example Org Policy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Label
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: rds-should-be-encrypted
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          namespaces:
            - "*?"
          kinds:
            - "DBInstance"
          selector:
            matchLabels:
              mycompany.com/policy-version: "1.0.0"
    validate:
      message: "RDS volumes must be encrypted."
      pattern:
        spec:
          storageEncrypted: true
